--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pied Piper</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,9 +17,19 @@
         <div class="header__wrapper">
 
             <div class="header__logo">
-                <img src="img/vector_1.svg" alt="Logo">
-                <img src="img/vector_2.svg" alt="Logo">
+                <!-- <img src="img/vector_1.svg" alt="Logo">
+                <img src="img/vector_2.svg" alt="Logo"> -->
             </div> 
+
+            <nav>
+                <ul>
+                    <li><a href="#" class="header_nav_anchor">the problem</a></li>
+                    <li>|</li>
+                    <li><a href="#" class="header_nav_anchor">PiedPiperCoin</a></li>
+                    <li>|</li>
+                    <li><a href="#" class="header_nav_anchor">the team</a></li>
+                </ul>
+            </nav>
 
         </div>
 
