add sections filling

--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 </head>
 <body>
     <header>
-
         <div class="header__wrapper">
-
             <div class="header__logo">
-                <!-- <img src="img/vector_1.svg" alt="Logo">
-                <img src="img/vector_2.svg" alt="Logo"> -->
+                <img src="img/vector_1.svg" alt="Logo">
+                <img src="img/vector_2.svg" alt="Logo">
             </div> 
 
             <nav>
@@ -30,39 +28,98 @@
                     <li><a href="#" class="header_nav_anchor">the team</a></li>
                 </ul>
             </nav>
-
         </div>
-
     </header>
 
-    <section>
-
-
+    <section class="isHere">
+        <div class="isHere__wrapper">
+            <h1>PiperNet Is Here</h1>
+        </div>
     </section>
 
-    <section>
+    <section class="problem">
+        <div class="problem__wrapper">
+            <h2>The Problem</h2>
 
-
+            <p>Beneath the flashy homepages of your favorite sites lurk Hooli™ and other evil corporations out to hoard and sell your most personal data.</p>
+            <br>
+            <p>What was built to be the ultimate platform for the free sharing of knowledge has turned into a money-hungry monster feasting on our privacy and freedom.</p>
+            <br>    
+            <p>But fear not, for Pied Piper has the answer! And it’s simple:<br>An autonomous peer-to-peer network featuring distributed storage powered by universal compression, accelerated scheduling allocation, and end-to-end encryption.</p>
+            <br>   
+            <p>Put even simpler — <strong>it’s the internet, completely decentralized</strong>.</p>
+        </div>
     </section>
 
-    <section>
+    <section class="statement">
+        <div class="statement__wrapper">
+            <p>We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.</p>
+        </div>
+    </section>    
 
+    <section class="introduc">
+        <div class="introduc__wrapper">
+            <h2>Introducing PiedPiperCoin</h2>
 
+            <img src="img/ppc logo.png" alt="PiedPiper Coin">
+
+            <p>Pied Piper's new internet is built <em>for users, by users</em>. You supply the storage, compute, and networking resources that power our entire decentralized web.</p>
+
+            <p>Now there's a way to give credit where credit is due. Compute credit, that is! The more you share your device resources, the more PiedPiperCoin you receive.</p>
+
+            <p>Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone you'll love all you can do with PiedPiperCoin.</p>
+        </div>
     </section>
 
-    <section>
+    <section class="team">
+        <div class="team__wrapper">
+            <h2>The Team</h2>
 
+            <div class="team__unit_wrapper">
+                <div class="team__unit">
+                    <img src="img/team/hendricks.png" alt="Richard Hendricks">
+                    <p class="team__unit_name">Richard&#160;Hendricks</p>
+                    <p class="team__unit_position">Founder&#160;&&#160;CEO</p>
+                </div>
 
-    </section>
+                <div class="team__unit">
+                    <img src="img/team/chugtai.png" alt="Dinesh Chugtai">
+                    <p class="team__unit_name">Dinesh&#160;Chugtai</p>
+                    <p class="team__unit_position">Senior&#160;Programmer</p>
+                </div>
 
-    <section>
+                <div class="team__unit">
+                    <img src="img/team/gilfoyle.png" alt="Bertram Gilfoyle">
+                    <p class="team__unit_name">Bertram&#160;Gilfoyle</p>
+                    <p class="team__unit_position">Chief&#160;Systems&#160;Architect</p>
+                </div>
 
+                <div class="team__unit">
+                    <img src="img/team/dunn.png" alt="Jared Dunn">
+                    <p class="team__unit_name">Jared&#160;Dunn</p>
+                    <p class="team__unit_position">Chief&#160;Operating&#160;Officer</p>
+                </div>
 
+                <div class="team__unit">
+                    <img src="img/team/hall.png" alt="Monica Hall">
+                    <p class="team__unit_name">Monica&#160;Hall</p>
+                    <p class="team__unit_position">Chief&#160;Financial&#160;Officer</p>
+                </div>
+
+                <div class="team__unit">
+                    <img src="img/team/bighetti.png" alt="Nelson Bighetti">
+                    <p class="team__unit_name">Nelson&#160;Bighetti</p>
+                    <p class="team__unit_position">Majority&#160;Investor</p>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <footer>
-
-
+        <div class="footer__wrapper">
+            <p>All other trademarks and copyrights are the property of their respective owners. Use of these names, trademarks and brands does not imply endorsement.</p>
+        </div>
     </footer>    
 </body>
 </html>
