--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="header__wrapper">
-            <div class="header__logo" id="logo">
+            <div class="header__logo">
                 <img class="logo_part" src="img/vector_1.svg" alt="Logo">
                 <img src="img/vector_2.svg" alt="Logo">
             </div> 
@@ -61,7 +61,7 @@
         <div class="introduc__wrapper">
             <h2>Introducing PiedPiperCoin</h2>
 
-            <a href="#logo"><img src="img/ppc logo.png" alt="PiedPiper Coin"></a>
+            <img src="img/ppc logo.png" alt="PiedPiper Coin">
 
             <p>Pied Piper's new internet is built <em>for users, by users</em>. You supply the storage, compute, and networking resources that power our entire decentralized web.</p>
 
